--- a/css/shop.css
+++ b/css/shop.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Poppins, sans-serif;
     margin: 0;
@@ -29,6 +33,8 @@ header {
 }
 
 header .cart-icon {
+    /* position: fixed;
+    right: 5%; */
     position: relative;
     cursor: pointer;
 }
@@ -69,7 +75,7 @@ header .cart-icon svg:hover {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    padding-bottom: 2.5rem;
+    padding-bottom: 2rem;
 }
 
 .products-list .product {
@@ -101,6 +107,10 @@ header .cart-icon svg:hover {
 .products-list .product h2 {
     font-weight: 600;
     font-size: larger;
+}
+
+.products-list .product p {
+    text-decoration: underline;
 }
 
 .products-list .product .product-price {
@@ -184,7 +194,6 @@ body.show-cart div#overlay {
     background: rgba(0, 0, 0, 0.9);
     height: 100%;
     width: 100%;
-    z-index: 100;
 }
 
 .popup-card.show {
@@ -413,6 +422,28 @@ body.show-cart .container {
     overflow: auto;
 }
 
+/* Back to top button */
+.back-to-top {
+    margin-bottom: 1.5rem;
+}
+
+.back-to-top button {
+    border: solid 1px #333;
+    border-radius: 5px;
+    padding: 1rem 2rem;
+    background-color: #fff;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    cursor: pointer;
+    transition-duration: .3s;
+    box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+}
+
+.back-to-top button:hover {
+    box-shadow: 7px 7px 16px 0 rgba(33, 33, 33, .45);
+    transform: translateX(-5px) translateY(-5px);
+}
+
 /* Footer */
 
 footer {
@@ -463,6 +494,3 @@ footer button:hover {
     background: #1f1f1f;
     border-radius: 20px;
 }
-
-/* Responsive Layout for Different Screen Sizes */
-
