--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+* {
+    box-sizing: border-box;
+}
 
 body {
     font-family: Poppins, sans-serif;
     font-size: 17px;
-    padding: 8px;
+    padding: 5px 40px;
 }
 
-* {
-    box-sizing: border-box;
+.back-to-shop {
+    text-decoration: none;
+    color: #1f1f1f;
+    font-size: large;
+}
+
+.back-to-shop:hover {
+    text-decoration: underline;
 }
 
 .row {
@@ -18,7 +27,7 @@ body {
 }
 
 .col-25 {
-    flex: 25%;
+    flex: 35%;
 }
 
 .col-50 {
@@ -26,12 +35,10 @@ body {
 }
 
 .col-75 {
-    flex: 75%;
+    flex: 65%;
 }
 
-.col-25,
-.col-50,
-.col-75 {
+.col-25, .col-50, .col-75 {
     padding: 0 16px;
 }
 
@@ -45,10 +52,10 @@ h1 {
     background-color: #f2f2f2;
     padding: 5px 20px 15px 20px;
     border: 1px solid #d3d3d3;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
-input[type=text] {
+input {
     width: 100%;
     margin-bottom: 20px;
     padding: 12px;
@@ -68,20 +75,20 @@ label {
 }
 
 .btn {
-    background-color: #0565ce;
+    background-color: #033c7b;
     color: #fff;
     padding: 12px;
     margin: 10px 0;
     border: none;
     width: 100%;
-    border-radius: 3px;
+    border-radius: 60px;
     cursor: pointer;
     font-size: 17px;
     transition-duration: 0.4s;
 }
 
 .btn:hover {
-    background-color: #054589;
+    background-color: #011e3d;
 }
 
 a {
@@ -94,11 +101,27 @@ hr {
 
 span.price {
     float: right;
-    color: grey;
+    color: #fff;
+}
+
+.cart .container{
+    letter-spacing: 1px;
+    background-color: #033c7b;
+    color: #fff;
+    border: none;
+    box-shadow: 0 10px 20px #555;
+}
+
+.cart-container .cart-item p{
+    display: grid;
+    grid-template-columns: 65% 1fr 15%;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 16px;
 }
 
 ::-webkit-scrollbar-track {
@@ -111,7 +134,7 @@ span.price {
     border-radius: 20px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
     .row {
         flex-direction: column-reverse;
     }
